website base layout

--- a/index.html
+++ b/index.html
@@ -60,14 +60,71 @@
     </section>
     <!--Hero ends-->
     <!--about us-->
-    <section class="About Us">
+    <section class="about-us-story"> <!--discover-our-story-->
         <div class="container">
-            <div class="info">
-                
+            <div class="aboutus-info"> <!--restraunt-info-->
+                <div class="aboutus-description padding-right animate-left"> <!--restraunt-description-->
+                    <div class="global-headline">
+                        <h2 class="sub-headline">
+                            <span class="first-letter">T</span>his is
+                        </h2>
+                        <h1 class="headline headline-dark">Our Pledge</h1>
+                        <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+                    </div>
+                    <p>
+                        According to all known laws of aviation, there is no way that a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway. Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT
+                    </p>
+                    <a href="" class="btn body-btn">About Us</a>
+                </div>
+                <div class="about-info-img animate-right">
+                    <img src="images/aboutus.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
-
+    <!--About Us Ends Here-->
+    <!--theateam starts here-->
+    <section class="theteam">
+        <div class="container">
+            <div class="global-headline">
+                <div class="animate-top">
+                    <h2 class="sub-headline">
+                        <span class="first-letter">T</span>he
+                    </h2>
+                </div>
+                <div class="animate-bottom">
+                    <h1 class="headline headline-dark">Team</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--theteamendshere-->
+<section class="the-team-text">
+    <div class="container">
+        <div class="theteam-info">
+            <div class="image-group padding-right animate-left">
+                <img src="images/brandon.jpg" alts="">
+                <img src="images/matt.jpg" alts="">
+                <img src="images/jacob.jpg" alts="">
+                <img src="images/collin.jpg" alts="">
+            </div>
+            <div class="team-description animate-right">
+                <div class="global-headline">
+                    <h2 class="sub-headline">
+                        <span class="first-letter">W</span>ho
+                    </h2>
+                    <h1 class="headline headline-dark">We are</h1>
+                    <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+                </div>
+                <p>
+                    According to all known laws of aviation, there is no way that a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway. Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT
+                </p>
+                <a href="#" class="btn body-btn">View something</a>
+            </div>
+        </div>
+    </div>
+</section>
+`
 <script src="main.js"></script>
 </body>
 
