website has navbar issues, but collapsing taken out

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pending</title>
     <!--Font awesome CDN-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    <link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="styles.css" />
+    
   </head>
   <body>
     <!--Nav bar starts here-->
@@ -40,7 +40,6 @@
             <i class="fas fa-times"></i>
             -->
           </div>
-          <a href="index.html" class="logo"><img src="images/logo-rosa.png" alt=""></a>
           <ul class="nav-list item-toggle">
             <li class="nav-item ">
               <a href="#hero" class="nav-link active">Home</a>
