--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
       </div>
     </header>
     <!--Nav bar starts here-->
-
+    
     <!--hero-->
     <section class="hero" id="hero">
       <div class="container">
@@ -101,7 +101,7 @@ Its wings are too small to get its fat little body off the ground. The bee, of c
 Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
 BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
             </p>
-            <a href="#footer" class="btn body-btn">See the Data</a>
+            <a href="#" class="btn body-btn">See the Data</a>
           </div>
           <div class="team-info-img animate-top">
             <img src="images/diversity.jpg" alt="" />
@@ -150,7 +150,7 @@ BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yell
               Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
               BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
             </p>
-            <a href="#footer" class="btn body-btn">See the Data</a>
+            <a href="#" class="btn body-btn">See the Data</a>
           </div>
         </div>
       </div>
