final commit for merge

--- a/Badgers-2.0-main/index.html
+++ b/Badgers-2.0-main/index.html
@@ -26,8 +26,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
     />
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="styles.css" />
     
   </head>
   <body>
@@ -43,7 +42,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
           </div>
           <ul class="nav-list item-toggle">
             <li class="nav-item ">
-              <a href="home" class="nav-link active">Home</a>
+              <a href="#hero" class="nav-link active">Home</a>
             </li>
             <li class="nav-item ">
               <a href="#The problem" class="nav-link ">The Problem</a>
@@ -66,8 +65,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
     <!--hero-->
     <section class="hero" id="hero">
       <div class="container">
-        <h2 class="sub-headline"><span class="first-letter">S</span>weater</h2>
-        <h1 class="headline">Weather</h1>
+        <h2 class="sub-headline"><span class="first-letter">T</span>he</h2>
+        <h1 class="headline">Issue</h1>
         <div class="headline-description">
           <div class="separator">
             <div class="line line-left"></div>
@@ -76,7 +75,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
           </div>
           <div class="single-animation">
             <h5>------</h5>
-            <a href="data_display" class="btn cta-btn">The Graphs</a>
+            <a href="#footer" class="btn cta-btn">The Graphs</a>
           </div>
         </div>
       </div>
@@ -96,18 +95,16 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
               <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             </div>
             <p>
-                As climate change brings a new frontier of hotter summers, drier winters, and harsher air, 
-                the question of what is coming looms.  Our group wanted to analyze past historical weather 
-                data in order to evaluate the potential impact on weather conditions UC Davis will face in the future.  
-                Furthermore, our team understands that the effects of climate change overreaches the boundaries of mother 
-                nature.  With effects such as poverty being aggravated by the inequalities of climate change, we wanted to 
-                see if there was a correlation in Davis.
+              According to all known laws of aviation, there is no way that a bee should be able to fly. 
+Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
+ Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
+Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
+BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
             </p>
-            <a href="data_display" class="btn body-btn">See the Data</a>
+            <a href="#" class="btn body-btn">See the Data</a>
           </div>
           <div class="team-info-img animate-top">
-            {% load static %}
-            <img src="{% static 'images/diversity.jpg' %}" alt="" />
+            <img src="images/diversity.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -136,8 +133,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
       <div class="container">
         <div class="team-info">
           <div class="padding-right ">
-            {% load static %}
-            <img class="animate-top" src="{% static 'images/ourdata.png' %}" alt="" />
+            <img class="animate-top" src="images/graph.jpg" alt="" />
           </div>
           <div class="team-description animate-right">
             <div class="global-headline">
@@ -148,10 +144,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
               <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             </div>
             <p>
-                This project aims to analyze historical climate conditions in Yolo County and Davis, utilizing data from the EPA and the University of California IPM. 
-                We attempt to forecast future weather conditions such as temperature, solar radiation, precipitation, air quality, and other outcomes using Facebook’s prophet machine learning framework to identify trends in the data. 
+              According to all known laws of aviation, there is no way that a bee should be able to fly. 
+              Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
+               Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
+              Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
+              BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
             </p>
-            <a href="data_display" class="btn body-btn">See the Data</a>
+            <a href="#" class="btn body-btn">See the Data</a>
           </div>
         </div>
       </div>
@@ -181,14 +180,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
           <div class="container">
             <div class="team-info">
               <div class="image-group padding-right ">
-                {% load static %}
-                <img class="animate-top" src="{% static 'images/matt.jpg' %}" alt="" />
-                {% load static %}
-                <img class="animate-bottom" src="{% static 'images/brandon.jpg' %}" alt="" />
-                {% load static %}
-                <img class="animate-top" src="{% static 'images/jacob.jpg' %}" alt="" />
-                {% load static %}
-                <img class="animate-top" src="{% static 'images/collin.jpg' %}" alt="" />
+                <img class="animate-top" src="images/matt.jpg" alt="" />
+                <img class="animate-bottom" src="images/brandon.jpg" alt="" />
+                <img class="animate-top" src="images/jacob.jpg" alt="" />
+                <img class="animate-top" src="images/collin.jpg" alt="" />
               </div>
               <div class="team-description animate-right">
                 <div class="global-headline">
@@ -199,12 +194,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
                   <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 </div>
                 <p>
-                    Team Badgers 2.0 is made up of a group of friends who all met during their time at UC Davis.  
-                    The team is made up of a wide range of majors: Matt Martel (CS Major), Jacob Saunders (CSE Major), 
-                    Brandon Matsumoto (Environmental Toxicology), and Collin Chee (Statistics and Psychology Major).  
-                    Our group is very passionate about the Environment and love to camp and go hiking.  
-                    As a result, we felt it was important to reflect on the growing threat of climate change, 
-                    poverty, and the town we love.
+                  According to all known laws of aviation, there is no way that a bee should be able to fly. 
+                  Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
+                   Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
+                  Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
+                  BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
                 </p>
               </div>
             </div>
@@ -231,7 +225,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
       </div>
     </footer>
     <!--footer ends-->
-    {% load static %}
-    <script src="{% static 'main.js' %}"></script>
+    <script src="main.js"></script>
   </body>
 </html>
