--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
               <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             </div>
             <p>
-              According to all known laws of aviation, there is no way that a bee should be able to fly. 
-Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
- Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
-Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
-BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
+             As climate change brings a new frontier of hotter summers, drier winters, and harsher air, the question of what is coming looms.  Our group wanted to analyze past historical weather data in order to evaluate the potential impact on weather conditions UC Davis will face in the future.  Furthermore, our team understands that the effects of climate change overreaches the boundaries of mother nature.  With effects such as poverty being aggravated by the inequalities of climate change, we wanted to see if there was a correlation in Davis.
             </p>
             <a href="#" class="btn body-btn">See the Data</a>
           </div>
@@ -144,11 +140,7 @@ BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yell
               <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             </div>
             <p>
-              According to all known laws of aviation, there is no way that a bee should be able to fly. 
-              Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
-               Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
-              Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
-              BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
+              This project aims to analyze historical climate conditions in Yolo County and Davis, utilizing data from the EPA and the University of California IPM. We attempt to forecast future weather conditions such as temperature, solar radiation, precipitation, air quality, and other outcomes using Facebook’s prophet machine learning framework to identify trends in the data.
             </p>
             <a href="#" class="btn body-btn">See the Data</a>
           </div>
@@ -194,11 +186,7 @@ BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yell
                   <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 </div>
                 <p>
-                  According to all known laws of aviation, there is no way that a bee should be able to fly. 
-                  Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway.
-                   Because bees don’t care what humans think is impossible.” SEQ. 75 - “INTRO TO BARRY” INT. BENSON HOUSE - DAY ANGLE ON: Sneakers on the ground. 
-                  Camera PANS UP to reveal BARRY BENSON’S BEDROOM ANGLE ON: Barry’s hand flipping through different sweaters in his closet. 
-                  BARRY Yellow black, yellow black, yellow black, yellow black, yellow black, yellow black.
+                  ATeam Badgers 2.0 is made up of a group of friends who all met during their time at UC Davis.  The team is made up of a wide range of majors: Matt Martel (CS Major), Jacob Saunders (CSE Major), Brandon Matsumoto (Environmental Toxicology), and Collin Chee (Statistics and Psychology Major).  Our group is very passionate about the Environment and love to camp and go hiking.  As a result, we felt it was important to reflect on the growing threat of climate change, poverty, and the town we love.
                 </p>
               </div>
             </div>
