--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
                   <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 </div>
                 <p>
-                  ATeam Badgers 2.0 is made up of a group of friends who all met during their time at UC Davis.  The team is made up of a wide range of majors: Matt Martel (CS Major), Jacob Saunders (CSE Major), Brandon Matsumoto (Environmental Toxicology), and Collin Chee (Statistics and Psychology Major).  Our group is very passionate about the Environment and love to camp and go hiking.  As a result, we felt it was important to reflect on the growing threat of climate change, poverty, and the town we love.
+                  Team Badgers 2.0 is made up of a group of friends who all met during their time at UC Davis.  The team is made up of a wide range of majors: Matt Martel (CS Major), Jacob Saunders (CSE Major), Brandon Matsumoto (Environmental Toxicology), and Collin Chee (Statistics and Psychology Major).  Our group is very passionate about the Environment and love to camp and go hiking.  As a result, we felt it was important to reflect on the growing threat of climate change, poverty, and the town we love.
                 </p>
               </div>
             </div>
